--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-command = "npm run build"
-base = "thesis-by-paul-evans"
-publish = "dist"
+  command = "npm run build"
+  base = "thesis-by-paul-evans"
+  publish = "thesis-by-paul-evans/build"
 
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
